cargo-features = ["edition2024"]

[package]
name = "pj2_escrow_pda"
version = "0.1.0"
description = "Created with Anchor"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "pj2_escrow_pda"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

